# dr-watch

./: .env.example  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  collect-rss.yml  ingest.yml
data/rss/: 2026-07-12-serie1.xml  2026-07-12-serie2.xml  2026-07-13-serie1.xml  2026-07-13-serie2.xml  2026-07-14-serie1.xml  2026-07-14-serie2.xml  2026-07-15-serie1.xml  2026-07-15-serie2.xml  2026-07-16-serie1.xml  2026-07-16-serie2.xml  2026-07-17-serie1.xml  2026-07-17-serie2.xml  2026-07-18-serie1.xml  2026-07-18-serie2.xml  2026-07-20-serie1.xml  2026-07-20-serie2.xml  2026-07-21-serie1.xml  2026-07-21-serie2.xml  2026-07-22-serie1.xml  2026-07-22-serie2.xml  2026-07-23-serie1.xml  2026-07-23-serie2.xml  2026-07-24-serie1.xml  2026-07-24-serie2.xml
docs/decisions/: 001-plain-language-headlines.md  002-story-grouping-front-page.md  003-curated-theme-imagery.md  004-scarce-imagery-two-columns.md  005-no-photographs.md  006-golden-set-blind-labelling.md
src/: config.py
src/db/: base.py  engine.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial_schema.py  0002_act_analysis.py  0003_pipeline_run.py  0004_headline.py  0005_day_grouping.py  0006_golden_label.py
src/db/repositories/: analysis.py  gazette.py  golden.py
src/evals/: label.py
src/ingestion/: daily.py  pdf_text.py  rss.py
src/pipeline/: budget.py  classify.py  group_related.py  providers.py  run_analysis.py  show_digest.py  summarize.py  verify.py
tests/: conftest.py  test_gazette_repository.py  test_golden_set.py  test_pdf_text.py  test_pipeline.py  test_rss.py  test_verify.py
tests/fixtures/: serie1-2026-07-10.xml
web/: package-lock.json  package.json
web/app/: digest.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/arquivo/: page.tsx
web/app/creditos/: page.tsx
web/app/d/[date]/: page.tsx
web/app/precisao/: page.tsx
web/app/tema/[tema]/: page.tsx
web/lib/: db.ts  format.ts  images.ts
