[project]
name = "dr-watch"
version = "0.1.0"
description = "Daily LLM digest of Portugal's official gazette (Diário da República), with public evals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "httpx>=0.28",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    # [crypto]: INCM publishes act PDFs AES-encrypted (empty user password, edit-protection),
    # so pypdf needs the cryptography backend just to read them. Found on the first clean env.
    "pypdf[crypto]>=5.1",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DTZ", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
